--- a/view/accountcontroller/index.html
+++ b/view/accountcontroller/index.html
@@ -1,20 +1,20 @@
 <html>
-<head>
+<header>
     <title>login</title>
-    This is Login page
+    This is Index page
     <div class="box-title">
         <h3 class="heading">
 
         </h3>
     </div>
-</head>
+</header>
 <body style="background: grey">
 <h1>Login</h1>
 
-<form style="alignment: center" method="post" action="index.html" >
-    username:  <input type="text" value="" /><br>
-    password:  <input type="password" value=""/><br>
-        <button type="submit" value="Login" formaction="/account/index/login/welcome">
+<form style="alignment: center" method="post" action="/" >
+    username:  <input type="text" name="username"  id="name" /><br>
+    password:  <input type="password" name="password" id="pwd"/><br>
+        <button type="submit" value="Login" >
             Sign in
     </button>
     {{.err}}
