--- a/view/accountcontroller/index.html
+++ b/view/accountcontroller/index.html
@@ -8,7 +8,7 @@
 <div class="loginbox">
     <img src="../../assets/images.png" class="avatar">
     <h1>Login</h1>
-    <form style="alignment: center" method="post" action="/" >
+    <form style="alignment: center" method="post" action="/login" >
         <p>username</p>
         <input type="text"  name="username"  id="name" placeholder="Enter Username">
         <br>
