finnally form values are assigned to the variables in the account controller function

--- a/view/accountcontroller/createAccount.html
+++ b/view/accountcontroller/createAccount.html
@@ -17,8 +17,7 @@ Welcome to the Great Krikaalan Magic Show<br>
         <br>
         <input type="password" name="confirmpassword" ng-model="confirmpassword" placeholder="Confirm Password" required>
         <br>
-        <button style="alignment: center !important;" type="submit" value="sign up" ng-disabled="error ||
-        incomplete" ng-click="accountcontroller.CreateAccount" href="/0">sign up</button>
+        <button style="alignment: center !important;" type="submit" value="sign up" >sign up</button>
         <br>
         <a href="/0">Login Page</a><br>
 
