--- a/view/accountcontroller/welcome.html
+++ b/view/accountcontroller/welcome.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="../../assets/style.css">
 <head>
     <meta charset="UTF-8">
-    <title>WELCOME</title>
+    <title>WELCOME {{.username}}</title>
 </head>
 <body>
 <h3>This is login page</h3>
